# TheLonelyDiscordBot

./: README.md  bot.py  message_handler.py  pyproject.toml  server.py  settings.py
commands/: base_command.py  cat.py  dog.py  rps.py  stats(actual effort).py  usednames.py  weight.py
templates/: index.html  site2.html
