[tool.poetry]
name = "discord-bot-template-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apscheduler = "^3.6.3"
discord = "^1.0.1"
emoji = "^0.6.0"
flask = "^1.1.2"
ctx = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
